force-app/main/default/objects/Quiz_Attendee__c/Quiz_Attendee__c.object-meta.xml
<CustomObject>
    <label>Quiz Attendee</label>
    <nameField>
        <label>Quiz Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quiz Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>