force-app/main/default/objects/Quiz_Attendee__c/fields/Correct_Responses__c.field-meta.xml
<CustomField>
    <fullName>Correct_Responses__c</fullName>
    <label>Correct Responses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>