force-app/main/default/objects/Quiz_Attendee__c/fields/Number_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions__c</fullName>
    <label>Number of Questions</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>