force-app/main/default/objects/Quiz_Attendee__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quiz Attendees</relationshipLabel>
    <relationshipName>Quiz_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>