force-app/main/default/objects/Quiz_Attendee__c/fields/Quiz__c.field-meta.xml
<CustomField>
    <fullName>Quiz__c</fullName>
    <label>Quiz</label>
    <referenceTo>Quiz__c</referenceTo>
    <relationshipLabel>Quiz Attendees</relationshipLabel>
    <relationshipName>Quiz_Attendees</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>