force-app/main/default/objects/Quiz_Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Player__c</columns>
    <columns>Quiz__c</columns>
    <columns>Correct_Responses__c</columns>
    <columns>Number_of_Questions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>